--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit-option-menu
 tensorflow==2.9.1
 Pillow==9.2.0
-numpy==1.23.1
-scikit-learn==1.1.1
-streamlit
+numpy==1.26.3
+scikit-learn==1.3.2
+streamlit==1.29.0
+streamlit-option-menu==0.3.6
