--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -4,8 +4,8 @@ port = 8501
 enableCORS = false
 
 [theme]
-primaryColor = "#ec7063"
-backgroundColor = "#48c9b0"
-secondaryBackgroundColor = "#48c9b0"
-textColor = "#ffffff"
-font = "sans-serif"
+primaryColor = '#ec7063' # Blue
+backgroundColor = '#48c9b0' # cyan
+secondaryBackgroundColor = '##48c9b0' # sky blue
+textColor = '#F#fdfefe' # White
+font = 'sans serif, 1' # Increase the font size to 1
