--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,6 +2,6 @@
 [theme]
 primaryColor = '#ec7063' 
 backgroundColor = '#48c9b0' 
-secondaryBackgroundColor = '##48c9b0'
+secondaryBackgroundColor = '#48c9b0'
 textColor = '#FFFFFF' 
 font = 'sans serif, 11' 
