--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 
 [theme]
-primaryColor = '##E3A857' 
+primaryColor = '#E3A857' 
 backgroundColor = '#48c9b0' 
 secondaryBackgroundColor = '#48c9b0'
 textColor = '#FFFFFF' 
