--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,7 @@
 
 [theme]
 primaryColor = '#E3A857' 
-backgroundColor = '#48c9b0' 
+backgroundColor = '##48c9b0' 
 secondaryBackgroundColor = '#48c9b0'
 textColor = '#FFFFFF' 
 font = 'sans serif, 11' 
