--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,5 +3,5 @@
 primaryColor = '##E3A857' 
 backgroundColor = '#48c9b0' 
 secondaryBackgroundColor = '#48c9b0'
-textColor = '#FFFFFF' 
+textColor = '#0073E6' 
 font = 'sans serif, 11' 
