--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,6 +2,6 @@
 [theme]
 primaryColor = '#E3A857' 
 backgroundColor = '#EAEAEA' 
-secondaryBackgroundColor = '#48c9b0'
+secondaryBackgroundColor = '#EAEAEA'
 textColor = '#2C2C2C' 
 font = 'sans serif, 11' 
