--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,5 @@
-
-[theme]
-primaryColor = '#E3A857' 
-backgroundColor = '#E3A857' 
-secondaryBackgroundColor = '##48c9b0'
+primaryColor = '##E3A857' 
+backgroundColor = '#48c9b0' 
+secondaryBackgroundColor = '#48c9b0'
 textColor = '#2C2C2C' 
 font = 'sans serif, 11' 
