--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,6 @@
-#theme
-primaryColor = '##E3A857' 
+
+[theme]
+primaryColor = '#E3A857' 
 backgroundColor = '#48c9b0' 
 secondaryBackgroundColor = '#48c9b0'
 textColor = '#2C2C2C' 
