--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,6 +2,6 @@
 [theme]
 primaryColor = '##E3A857' 
 backgroundColor = '#48c9b0' 
-secondaryBackgroundColor = '#48c9b0'
+secondaryBackgroundColor = '#2b4d6c'
 textColor = '#2C2C2C' 
 font = 'sans serif, 11' 
