--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,7 @@
 
 [theme]
 primaryColor = '##E3A857' 
-backgroundColor = '#48c9b0' 
-secondaryBackgroundColor = '#2b4d6c'
+backgroundColor = '#87e2e8' 
+secondaryBackgroundColor = '#87e2e8'
 textColor = '#2C2C2C' 
 font = 'sans serif, 11' 
