--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,7 @@
 
 [theme]
 primaryColor = '##E3A857' 
-backgroundColor = '#87e2e8' 
-secondaryBackgroundColor = '#87e2e8'
+backgroundColor = '#069db8' 
+secondaryBackgroundColor = '#069db8'
 textColor = '#2C2C2C' 
 font = 'sans serif, 11' 
