--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,5 +3,5 @@
 primaryColor = '##E3A857' 
 backgroundColor = '#069db8' 
 secondaryBackgroundColor = '#069db8'
-textColor = '#2C2C2C' 
+textColor = '#87e2e8' 
 font = 'sans serif, 11' 
