--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,7 @@
 
 [theme]
 primaryColor = '##E3A857' 
-backgroundColor = '#069db8' 
+backgroundColor = '#FFFFFF' 
 secondaryBackgroundColor = '#069db8'
 textColor = '#000000' 
 font = 'sans serif, 11' 
